# mtproto-rs

./: .travis.yml  Cargo.toml  README.md  build.rs
async-transform/: Cargo.toml
async-transform/src/: async_fn_to_impl_future.rs  impl_async_methods_to_impl_futures.rs  item_trait_with_async_methods.rs  lib.rs  trait_decl_async_methods_to_box_futures.rs  trait_impl_async_methods_to_box_futures.rs  transform.rs
examples/: auth.rs  auth_async_await.rs  dynamic.rs  http_auth.rs  tcp_auth.rs
src/: error.rs  lib.rs  manual_types.rs  protocol.rs  server.rs  utils.rs
src/async_await/network/: auth.rs
src/async_await/network/connection/: common.rs  http.rs  macros.rs  mod.rs  tcp_abridged.rs  tcp_common.rs  tcp_full.rs  tcp_intermediate.rs
src/async_io/: lines.rs  mod.rs  read_exact.rs  write_all.rs
src/bigint/: mod.rs  num_bigint.rs  openssl.rs
src/crypto/: aes.rs  factor.rs  hash.rs  mod.rs  rsa.rs
src/crypto/aes/: common.rs  mod.rs  openssl.rs  rust_crypto.rs  tests.rs
src/crypto/hash/: mod.rs  openssl.rs  rust_crypto.rs  tests.rs
src/crypto/rsa/: common.rs  mod.rs  num_bigint.rs  openssl.rs  tests.rs
src/manual_types/: i256.rs  mod.rs
src/network/: auth.rs  common.rs  mod.rs  rpc.rs  salt.rs  sender.rs  state.rs
src/network/connection/: common.rs  http.rs  macros.rs  mod.rs  server.rs  tcp_abridged.rs  tcp_common.rs  tcp_full.rs  tcp_intermediate.rs
src/rpc/: auth.rs  message.rs  mod.rs  session.rs  utils.rs
src/rpc/connection/: http.rs  mod.rs  tcp.rs
src/rpc/encryption/: asymm.rs  symm.rs  utils.rs
src/tl/: dynamic.rs  gzip_packed.rs  message.rs  mod.rs  rpc_result.rs
tests/: message.rs
tl/: 000-scheme.tl  minimal.tl  tl-schema-list.txt
tl_codegen/: Cargo.toml  README.md
tl_codegen/src/: ast.rs  generator.rs  lib.rs
