[package]
name = "mtproto"
version = "0.0.1"
description = "MTProto protocol and schema implementation in Rust"
authors = ["Connor Hilarides <connorcpu@live.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Connicpu/mtproto-rs"
documentation = "https://docs.rs/mtproto"
repository = "https://github.com/Connicpu/mtproto-rs"
keywords = ["async", "mtproto", "protocol", "telegram"]
categories = ["api-bindings"]


[dependencies]
aes = { version = "0.3", optional = true }
arrayref = "0.3"
base64 = { version = "0.9", optional = true }
byteorder = "1.2"
cfg-if = "0.1"
chrono = "0.4"
crc = "1.8"
der-parser = { version = "1.0", optional = true }
digest = { version = "0.8", optional = true }
erased-serde = "0.3"
error-chain = "0.12"
flate2 = "1.0"
futures = "0.1"
lazy_static = "1.0"
log = "0.4"
nom = { version = "4.1", optional = true }
num-bigint = { version = "0.2", features = ["rand"], optional = true }
num-traits = "0.2"
openssl = { version = "0.10", optional = true }
rand = { version = "0.5", features = ["i128_support"] }
serde = "1.0"
serde_bytes = "0.10"
serde_derive = "1.0"
serde_mtproto = { git = "https://github.com/hcpl/serde_mtproto", rev = "e24cc59" }
serde_mtproto_derive = { git = "https://github.com/hcpl/serde_mtproto", rev = "e24cc59" }
sha-1 = { version = "0.8", optional = true }
sha2 = { version = "0.8", optional = true }
state_machine_future = { git = "https://github.com/hcpl/state_machine_future", rev = "dc98d89" }
tokio-executor = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-timer = "0.2"

[build-dependencies]
env_logger = "0.5"
error-chain = "0.12"
log = "0.4"
tl_codegen = { path = "tl_codegen" }

[dev-dependencies]
dotenv = "0.13"
env_logger = "0.5"
pretty_assertions = "0.5"
tokio = "0.1"


[features]
default = ["non-openssl-impls"]
non-openssl-impls = ["aes", "base64", "der-parser", "digest", "nom", "num-bigint", "sha-1", "sha2"]


[profile.dev]
codegen-units = 16
