[package]
name = "tl_codegen"
version = "0.0.1"
description = "Generator from MTProto schema to Rust code"
authors = ["Connor Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/Connicpu/mtproto-rs"
documentation = "https://docs.rs/tl_codegen"
repository = "https://github.com/Connicpu/mtproto-rs"
keywords = ["codegen", "mtproto", "telegram"]

[dependencies]
error-chain = "0.12"
petgraph = { version = "0.4", default-features = false }
pom = "1.0"
quote = "0.3"
syn = { version = "0.11", features = ["full"] }
synom = "0.11"
